--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+   "generate-sitemap": "node sitemap-generator.js",
+  "start": "react-scripts start"
+  
+
   },
   "dependencies": {
     "framer-motion": "^12.23.24",
