--- a/netlify.toml
+++ b/netlify.toml
@@ -9,3 +9,9 @@
   from = "/*"
   to = "/index.html"
   status = 200
+
+[functions]
+  node_bundler = "esbuild"
+
+[functions.update-trip]
+  external_node_modules = ["@octokit/rest"]
